--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
-  }
+  },
+  "packageManager": "bun@1.2.10"
 }
