--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "@catppuccin/vitepress": "^0.1.2"
+  },
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
