--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@catppuccin/vitepress": "^0.1.2"
   },
   "devDependencies": {
-    "vitepress": "^1.6.4"
+    "mermaid": "^11.12.2",
+    "vitepress": "^1.6.4",
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
