--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "fumadocs-core": "16.6.3",
     "fumadocs-mdx": "14.2.7",
+    "fumadocs-openapi": "^10.3.6",
     "fumadocs-ui": "16.6.3",
-    "lucide-react": "^0.570.0",
+    "lucide-react": "^0.574.0",
+    "mermaid": "^11.12.3",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.1"
