--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "fumadocs-core": "16.6.3",
+    "fumadocs-core": "16.6.4",
     "fumadocs-mdx": "14.2.7",
-    "fumadocs-openapi": "^10.3.6",
-    "fumadocs-ui": "16.6.3",
-    "lucide-react": "^0.574.0",
+    "fumadocs-openapi": "^10.3.7",
+    "fumadocs-ui": "npm:@fumadocs/base-ui@^16.6.4",
+    "lucide-react": "^0.575.0",
     "mermaid": "^11.12.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwind-merge": "^3.4.1"
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^25.2.3",
+    "@types/node": "^25.3.0",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^4.2.0",
     "typescript": "^5.9.3",
-    "@biomejs/biome": "^2.4.2"
+    "@biomejs/biome": "^2.4.4"
   }
 }
